--- a/locales/en.json
+++ b/locales/en.json
@@ -11,5 +11,6 @@
     "Tu navegador no admite la reproducción de videos.": "Your browser does not support video playback.",
     "Vive experiencias únicas en paisajes únicos": "Live Unique Experiences in Unparalleled Landscapes",
     "El mejor lugar para disfrutar tus vacaciones en todo Cancún": "The Best Place to Enjoy Your Vacation in All of Cancun!",
+    "Buscar": "Search",
     "": ""
 }
