--- a/locales/es.json
+++ b/locales/es.json
@@ -11,5 +11,6 @@
     "Tu navegador no admite la reproducción de videos.": "Tu navegador no admite la reproducción de videos.",
     "Vive experiencias únicas en paisajes únicos": "Vive experiencias únicas en paisajes únicos",
     "El mejor lugar para disfrutar tus vacaciones en todo Cancún": "¡El mejor lugar para disfrutar tus vacaciones en todo Cancún!",
+    "Buscar": "Buscar",
     "": ""
 }
