--- a/locales/en.json
+++ b/locales/en.json
@@ -6,7 +6,7 @@
     "Sobre nosotros": "About Us",
     "Encuentra tu lugar en cancún": "Find Your Spot in Cancun",
     "No te pierdas estas promos": "Don't Miss Out on These Promos",
-    "Crea recuerdos inolvidables": "Create Unforgettable Memories",
+    "Crea recuerdos inolvidables": "Check out these latest posts",
     "Cargando": "Loading...",
     "Tu navegador no admite la reproducción de videos.": "Your browser does not support video playback.",
     "Vive experiencias únicas en paisajes únicos": "Live Unique Experiences in Unparalleled Landscapes",
