--- a/locales/es.json
+++ b/locales/es.json
@@ -12,5 +12,30 @@
     "Vive experiencias únicas en paisajes únicos": "Vive experiencias únicas en paisajes únicos",
     "El mejor lugar para disfrutar tus vacaciones en todo Cancún": "¡El mejor lugar para disfrutar tus vacaciones en todo Cancún!",
     "Buscar": "Buscar",
+    "Autos de todos los modelos": "Autos de todos los modelos",
+    "Necesita un vehículo? Contáctenos personalmente": "Necesita un vehículo? Contáctenos personalmente",
+    "Jetski de todos los modelos": "Jetski de todos los modelos",
+    "Bienvenidos a Mexplorer": "Bienvenidos a Mexplorer",
+    "Descripcion1": "tu puerta de entrada para descubrir las maravillas de Cancún. Estamos dedicados a promover el turismo y ofrecer experiencias inolvidables en esta vibrante ciudad. Mexplorer te invita a explorar y disfrutar de todo lo que Cancún tiene para ofrecer.",
+    "Cancún es un paraíso tropical": "Cancún es un paraíso tropical",
+    "Descripcion2": "ubicado en la costa noreste de la Península de Yucatán, en México. Con sus aguas cristalinas de color turquesa, playas de arena blanca y una abundante vida marina, Cancún se ha convertido en uno de los destinos turísticos más solicitados en el mundo. Ven y descubre la belleza natural y cultural de Cancún con Mexplorer.",
+    "Creemos que viajar": "Creemos que viajar",
+    "Descripcion3": "no se trata solo de hacer turismo, sino de sumergirse en la cultura local y crear recuerdos para toda la vida. Ya sea que estés interesado en explorar antiguas ruinas mayas, hacer snorkel en el Gran Arrecife Mesoamericano o disfrutar de la deliciosa gastronomía mexicana, Cancún ofrece algo para todos. En Mexplorer, te ayudaremos a planificar una experiencia única y personalizada que se ajuste a tus intereses y presupuesto.",
+    "Nuestro equipo de entusiastas": "Nuestro equipo de entusiastas",
+    "Descripcion4": "está dedicado a crear experiencias únicas y personalizadas para nuestros visitantes. Hemos seleccionado cuidadosamente una amplia gama de actividades, tours y alojamientos para satisfacer diferentes intereses y presupuestos. Permítenos ser tu guía mientras descubres los tesoros escondidos de Cancún y te embarcas en aventuras inolvidables. Mexplorer te ofrece una variedad de opciones emocionantes para que disfrutes al máximo de tu visita a Cancún.",
+    "Como parte de nuestro compromiso": "Como parte de nuestro compromiso",
+    "Descripcion5": "con el turismo sostenible, Mexplorer apoya a las comunidades locales e iniciativas respetuosas con el medio ambiente. Creemos en preservar la belleza natural de Cancún para las futuras generaciones. Al elegir Mexplorer, no solo te embarcas en un viaje memorable, sino que también contribuyes a la preservación de este impresionante destino. Únete a nosotros y sé parte del turismo responsable en Cancún.",
+    "Gracias por elegirnos.": "Gracias por elegirnos.",
+    "Descripcion6": "Te invitamos a explorar nuestro sitio web, navegar por nuestras ofertas y comenzar a planificar tus vacaciones de ensueño en Cancún. Permítenos ayudarte a crear una experiencia que te dejará recuerdos para toda la vida.",
+    "¡Prepárate para descubrir la magia de Cancún con": "¡Prepárate para descubrir la magia de Cancún con",
+    "Todos los tours": "Todos los tours",
+    "Reservas": "Reservas",
+    "Sin reservas": "Sin reservas",
+    "Con reservas": "Con reservas",
+    "Sin promociones": "Sin promociones",
+    "Con promociones": "Con promociones",
+    "Duración": "Duración",
+    "Rango De Precio": "Rango De Precio",
+    "Limpiar filtros": "Limpiar filtros",
     "": ""
 }
