traduccion card tours y moneda

--- a/locales/en.json
+++ b/locales/en.json
@@ -37,5 +37,8 @@
     "Duración": " Duration",
     "Rango De Precio": "Price Range",
     "Limpiar filtros": "Clear Filters",
+    "Promo Exclusiva": "Exclusive Promo",
+    "Reserva ahora": "Reserve Now",
+    "Moneda": "usd",
     "": ""
 }
