--- a/locales/es.json
+++ b/locales/es.json
@@ -37,5 +37,7 @@
     "Duración": "Duración",
     "Rango De Precio": "Rango De Precio",
     "Limpiar filtros": "Limpiar filtros",
-    "": ""
+    "Promo Exclusiva": "Promo Exclusiva",
+    "Reserva ahora": "Reserva ahora",
+    "Moneda": "mxn"
 }
