englis detalle tours

--- a/locales/en.json
+++ b/locales/en.json
@@ -40,5 +40,15 @@
     "Promo Exclusiva": "Exclusive Promo",
     "Reserva ahora": "Reserve Now",
     "Moneda": "usd",
-    "": ""
+    "Descripción general": "Overview",
+    "Ver todos los tours en Cancun": "View All Tours in Cancun",
+    "Que incluye": "What's Included",
+    "Este tour incluye": "This Tour Includes",
+    "Este tour no incluye": "This Tour Does Not Include",
+    "Que llevar": "What to Bring",
+    "A este tour recomendamos llevar": "We Recommend Bringing for This Tour",
+    "Notas": "Ratings",
+    "Notas y recomendaciones": "Notes and Recommendations",
+    "Reseñas": "Reviews",
+    "Recomendaciones": "Recommendations"
 }
