--- a/locales/es.json
+++ b/locales/es.json
@@ -39,5 +39,16 @@
     "Limpiar filtros": "Limpiar filtros",
     "Promo Exclusiva": "Promo Exclusiva",
     "Reserva ahora": "Reserva ahora",
-    "Moneda": "mxn"
+    "Moneda": "mxn",
+    "Descripción general": "Descripción general",
+    "Ver todos los tours en Cancun": "Ver todos los tours en Cancun",
+    "Que incluye": "Que incluye",
+    "Este tour incluye": "Este tour incluye",
+    "Este tour no incluye": "Este tour no incluye",
+    "Que llevar": "Que Llevar",
+    "A este tour recomendamos llevar": "A este tour recomendamos llevar",
+    "Notas": "Notas",
+    "Notas y recomendaciones": "Notas y recomendaciones",
+    "Reseñas": "Reseñas",
+    "Recomendaciones": "Recomendaciones"
 }
