--- a/locales/en.json
+++ b/locales/en.json
@@ -50,5 +50,10 @@
     "Notas": "Ratings",
     "Notas y recomendaciones": "Notes and Recommendations",
     "Reseñas": "Reviews",
-    "Recomendaciones": "Recommendations"
+    "Recomendaciones": "Recommendations",
+    "Revisa nuestros últimos tours": "Check Out Our Latest Tours",
+    "Ver más": "See More",
+    "Limpiar": "Clear",
+    "Síguenos": "Follow Us",
+    "Mira estas últimas publicaciónes": "Check out these latest posts"
 }
