--- a/locales/es.json
+++ b/locales/es.json
@@ -50,5 +50,10 @@
     "Notas": "Notas",
     "Notas y recomendaciones": "Notas y recomendaciones",
     "Reseñas": "Reseñas",
-    "Recomendaciones": "Recomendaciones"
+    "Recomendaciones": "Recomendaciones",
+    "Revisa nuestros últimos tours": "Revisa nuestros últimos tours",
+    "Ver más": "Ver más",
+    "Limpiar": "Limpiar",
+    "Síguenos": "Síguenos",
+    "Mira estas últimas publicaciónes": "Mira estas últimas publicaciónes"
 }
