--- a/locales/en.json
+++ b/locales/en.json
@@ -39,6 +39,7 @@
     "Limpiar filtros": "Clear Filters",
     "Promo Exclusiva": "Exclusive Promo",
     "Reserva ahora": "Reserve Now",
+    "Reserva ahora!!": "RESERVE NOW",
     "Moneda": "usd",
     "Descripción general": "Overview",
     "Ver todos los tours en Cancun": "View All Tours in Cancun",
@@ -47,7 +48,7 @@
     "Este tour no incluye": "This Tour Does Not Include",
     "Que llevar": "What to Bring",
     "A este tour recomendamos llevar": "We Recommend Bringing for This Tour",
-    "Notas": "Ratings",
+    "Notas": "Notes",
     "Notas y recomendaciones": "Notes and Recommendations",
     "Reseñas": "Reviews",
     "Recomendaciones": "Recommendations",
@@ -55,5 +56,17 @@
     "Ver más": "See More",
     "Limpiar": "Clear",
     "Síguenos": "Follow Us",
-    "Mira estas últimas publicaciónes": "Check out these latest posts"
+    "Mira estas últimas publicaciónes": "Check out these latest posts",
+    "Reserva": "Reservation",
+    "Compra": " Buy",
+    "Adultos": "Adults",
+    "Niños": "Children",
+    "Hora": "Time",
+    "Elige una fecha": "Select a date",
+    "Total": "Total",
+    "Mostrar en": "Show in",
+    "Añadir a mi carrito de compras": "Add to my cart",
+    "Agrega una reseña": "Add a review",
+    "No tiene reseña": "No review",
+    "Enviar": "Send"
 }
