--- a/locales/es.json
+++ b/locales/es.json
@@ -39,6 +39,7 @@
     "Limpiar filtros": "Limpiar filtros",
     "Promo Exclusiva": "Promo Exclusiva",
     "Reserva ahora": "Reserva ahora",
+    "Reserva ahora!!": "RESERVA AHORA",
     "Moneda": "mxn",
     "Descripción general": "Descripción general",
     "Ver todos los tours en Cancun": "Ver todos los tours en Cancun",
@@ -55,5 +56,17 @@
     "Ver más": "Ver más",
     "Limpiar": "Limpiar",
     "Síguenos": "Síguenos",
-    "Mira estas últimas publicaciónes": "Mira estas últimas publicaciónes"
+    "Mira estas últimas publicaciónes": "Mira estas últimas publicaciónes",
+    "Reserva": "Reserva",
+    "Compra": "Compra",
+    "Adultos": "Adultos",
+    "Niños": "Niños",
+    "Hora": "Hora",
+    "Elige una fecha": "Elige una fecha",
+    "Total": "Total",
+    "Mostrar en": "Mostrar en",
+    "Añadir a mi carrito de compras": "Añadir a mi carrito de compras",
+    "Agrega una reseña": "Agrega una reseña",
+    "No tiene reseña": "No tiene reseña",
+    "Enviar": "Enviar"
 }
