--- a/locales/en.json
+++ b/locales/en.json
@@ -62,11 +62,26 @@
     "Adultos": "Adults",
     "Niños": "Children",
     "Hora": "Time",
+    "Fecha": "Date",
     "Elige una fecha": "Select a date",
     "Total": "Total",
     "Mostrar en": "Show in",
     "Añadir a mi carrito de compras": "Add to my cart",
     "Agrega una reseña": "Add a review",
     "No tiene reseña": "No review",
-    "Enviar": "Send"
+    "Enviar": "Send",
+    "Gracias por la orden": "Thank you for your order",
+    "Se enviará un correo con la confirmación de su compra": "An email with the purchase confirmation will be sent",
+    "Carrito": "shopping cart",
+    "Tu carrito actualmente está vacio, probá agregando tours": "Your shopping cart is currently empty, try adding tours",
+    "Item": "Item",
+    "Detalle": "detail",
+    "Precio": "Price",
+    "Tipo": "Type",
+    "Moned": "Currency",
+    "Vaciar Carrito": "Empty cart",
+    "Información de la orden": "Order information",
+    "Finalizar compra": "Finish purchase",
+    "Nombre": "Name",
+    "Apellido": "Last name"
 }
