--- a/locales/es.json
+++ b/locales/es.json
@@ -62,11 +62,26 @@
     "Adultos": "Adultos",
     "Niños": "Niños",
     "Hora": "Hora",
+    "Fecha": "Fecha",
     "Elige una fecha": "Elige una fecha",
     "Total": "Total",
     "Mostrar en": "Mostrar en",
     "Añadir a mi carrito de compras": "Añadir a mi carrito de compras",
     "Agrega una reseña": "Agrega una reseña",
     "No tiene reseña": "No tiene reseña",
-    "Enviar": "Enviar"
+    "Enviar": "Enviar",
+    "Gracias por la orden": "Gracias por la orden",
+    "Se enviará un correo con la confirmación de su compra": "Se enviará un correo con la confirmación de su compra",
+    "Carrito": "Carrito",
+    "Tu carrito actualmente está vacio, probá agregando tours": "Tu carrito actualmente está vacio, probá agregando tours",
+    "Item": "Articulo",
+    "Detalle": "Detalle",
+    "Precio": "Precio",
+    "Tipo": "Tipo",
+    "Moned": "Moneda",
+    "Vaciar Carrito": "Vaciar Carrito",
+    "Información de la orden": "Información de la orden",
+    "Finalizar compra": "Finalizar compra",
+    "Nombre": "Nombre",
+    "Apellido": "Apellido"
 }
