--- a/locales/en.json
+++ b/locales/en.json
@@ -83,5 +83,14 @@
     "Información de la orden": "Order information",
     "Finalizar compra": "Finish purchase",
     "Nombre": "Name",
-    "Apellido": "Last name"
+    "Apellido": "Last name",
+    "¡Reseña añadida exitosamente!": "¡Successfully added review!",
+    "Titulo": "Title",
+    "Deja tu opinión": "Leave your opinion",
+    "Mostrar menos": "Show less",
+    "Mostrar más": "Show more",
+    "Más comentarios": "More comments",
+    "Menos comentarios": "Less comments",
+    "Busca tu próxima aventura": "Search your next adventure",
+    "Busca una actividad...": "Search for a new activity..."
 }
