--- a/locales/es.json
+++ b/locales/es.json
@@ -83,5 +83,14 @@
     "Información de la orden": "Información de la orden",
     "Finalizar compra": "Finalizar compra",
     "Nombre": "Nombre",
-    "Apellido": "Apellido"
+    "Apellido": "Apellido",
+    "¡Reseña añadida exitosamente!": "¡Reseña añadida exitosamente!",
+    "Titulo": "Titulo",
+    "Deja tu opinión": "Deja tu opinión",
+    "Mostrar menos": "Mostrar menos",
+    "Mostrar más": "Mostrar más",
+    "Más comentarios": "Más comentarios",
+    "Menos comentarios": "Menos comentarios",
+    "Busca tu próxima aventura": "Busca tu próxima aventura",
+    "Busca una actividad...": "Busca una actividad..."
 }
