monedas en mayúsculas

--- a/locales/en.json
+++ b/locales/en.json
@@ -40,7 +40,7 @@
     "Promo Exclusiva": "Exclusive Promo",
     "Reserva ahora": "Reserve Now",
     "Reserva ahora!!": "RESERVE NOW",
-    "Moneda": "usd",
+    "Moneda": " USD",
     "Descripción general": "Overview",
     "Ver todos los tours en Cancun": "View All Tours in Cancun",
     "Que incluye": "What's Included",
