--- a/locales/es.json
+++ b/locales/es.json
@@ -40,7 +40,7 @@
     "Promo Exclusiva": "Promo Exclusiva",
     "Reserva ahora": "Reserva ahora",
     "Reserva ahora!!": "RESERVA AHORA",
-    "Moneda": "mxn",
+    "Moneda": " MXN",
     "Descripción general": "Descripción general",
     "Ver todos los tours en Cancun": "Ver todos los tours en Cancun",
     "Que incluye": "Que incluye",
