--- a/locales/en.json
+++ b/locales/en.json
@@ -92,5 +92,11 @@
     "Más comentarios": "More comments",
     "Menos comentarios": "Less comments",
     "Busca tu próxima aventura": "Search your next adventure",
-    "Busca una actividad...": "Search for a new activity..."
+    "Busca una actividad...": "Search for a new activity...",
+    "Mexplorer Copyright": "(© Mexplorer 2023)",
+    "Siguenos": "Follow us!",
+    "En Mexplorer": "In Mexplorer, we are always working to improve our prices and offer you the best deals on the tours and activities we provide.",
+    "Política de Privacidad": "Privacy Policy", 
+    "Política de Cancelacion":"ㅤCancel Policy",
+    "Copy":" Copyright © 2023 All Rights Reserved. Developed by"
 }
