--- a/locales/es.json
+++ b/locales/es.json
@@ -92,5 +92,11 @@
     "Más comentarios": "Más comentarios",
     "Menos comentarios": "Menos comentarios",
     "Busca tu próxima aventura": "Busca tu próxima aventura",
-    "Busca una actividad...": "Busca una actividad..."
+    "Busca una actividad...": "Busca una actividad...",
+    "Siguenos": "¡Síguenos!",
+    "En Mexplorer": "En Mexplorer, siempre estamos trabajando para mejorar nuestros precios y ofrecerte las mejores ofertas en los recorridos y actividades que ofrecemos.",
+    "Política de Privacidad": "Política de Privacidad",
+    "Política de Cancelación": "Política de Cancelación",
+    "Copy": "Derechos de Autor © 2023 Todos los Derechos Reservados. Desarrollado por"
+
 }
