--- a/locales/en.json
+++ b/locales/en.json
@@ -72,7 +72,7 @@
     "Enviar": "Send",
     "Gracias por la orden": "Thank you for your order",
     "Se enviará un correo con la confirmación de su compra": "An email with the purchase confirmation will be sent",
-    "Carrito": "shopping cart",
+    "Carrito": "Shopping cart",
     "Tu carrito actualmente está vacio, probá agregando tours": "Your shopping cart is currently empty, try adding tours",
     "Item": "Item",
     "Detalle": "detail",
